# robust-pandas-workshop

./: 01_introduction.ipynb  02_first_data_exploration.ipynb  03_type_annotations.ipynb  04_data_loading_module.ipynb  05_time_zones.ipynb  06_hypothesis_testing.ipynb  07_resampling_and_aggregations.ipynb  08_windowing_and_differences.ipynb  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt
solutions/: 03_type_annotations.ipynb  05_time_zones.ipynb  06_hypothesis_testing.ipynb  07_resampling_and_aggregations.ipynb  08_windowing_and_differences.ipynb
tests/: test_chmi_loader.py  test_open_meteo_processing.py  test_seasons.py
tests/data/: P1PRUZ01.xlsx  P1PRUZ01corrupt.xlsx  open_meteo_wide_example_1.parquet  open_meteo_wide_example_2.parquet
weatherlyser/: aggregations.py  api_models.py  loader.py  loader_03.py  pa_models.py  processors.py
