[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["weatherlyser"]

[project]
name = "weatherlyser"
authors = [
    {name = "Jakub Urban", email = "coobas@gmail.com"},
    {name = "Jan Pipek", email = "jan.pipek@gmail.com"},
]
description = "Robust Data Transformation with Pandas"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "jupyter==1.0.0",
    "pandas==2.0.3",
    "httpx==0.24.1",
    "pydantic==1.10.10",
    "mypy==1.4.1",
    "pandera==0.15.2",
    "black==23.7.0",
    "frictionless==5.13.1",
    "pyyaml==6.0",
    "hypothesis==6.81.1",
    "matplotlib==3.7.2",
    "openpyxl==3.1.2",
    "pytest==7.4.0",
    "statsmodels==0.14.0",
    "pyarrow==12.0.1",
]
dynamic = ["version"]


[tool.mypy]
files = ["weatherlyser", "tests"]
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]
# an issue is pandera prevents using the plugin
# https://github.com/unionai-oss/pandera/issues/1204
# plugins = ["pydantic.mypy", "pandera.mypy"]
